app-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-app
  namespace: share
spec:
  selector:
    name: share-app-pod
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
